# tws-tools

./: .gitignore  LICENSE  README.md
client/: .gitignore  README.md  main.py
docs/: architecture.md  board-design.md
firmware/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
firmware/main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  idf_component.yml  main.cc
firmware/main/boards/bose-open-earbud-ultra/: ble_uuid.h  board_bose_open_earbud_ultra.cc  config.json
firmware/main/boards/common/: ble_manager.h  board.cc  board.h  spp_manager.h  uuid_defs.h
firmware/main/boards/le-bose-qc-earbuds/: ble_uuid.h  board_le_bose_qc_earbuds.cc  config.json
firmware/scripts/: release.py
